@@ -1,3 +1,7 @@
+2012-11-15  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Removing the long-unused/defunct autopackage system.
+
 2012-11-14  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Converting the argument order of logspace, clarifying the
